# azure-sdk-for-rust.archive

./: .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md
eng/: license-header.txt
sdk/core/: Cargo.toml  README.md
sdk/core/src/: credential.rs  lib.rs  options.rs
sdk/core/src/azure/: mod.rs
sdk/core/src/azure/core/: credential.rs  mod.rs
sdk/keyvault/: Cargo.toml
sdk/keyvault/src/: SecretClient.rs  lib.rs  secrets.rs
