[package]
name = "azure-core"
description = "Core library for Azure SDK services"
version = "0.1.0"
authors = [
    "Heath Stewart <heaths@outlook.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/heaths/azure-sdk-for-rust"

[dependencies]
hyper = "0.12.35"
hyper-tls = "0.3.2"

[badges]
# azure-devops = { project = "...", pipeline = "...", build="2" }
