[package]
name = "azure-keyvault"
description = "This is the Microsoft Azure Key Vault Secrets client library"
version = "0.1.0"
authors = [
    "Heath Stewart <heaths@outlook.com>"
]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/heaths/azure-sdk-for-rust"

[features]
default = ["certificates", "keys", "secrets"]
certificates = []
keys = []
secrets = []

[dependencies]
azure-core = { path="../core" }
hyper = "0.13.6"
tokio = { version="0.2.21", features=["macros", "stream"] }

[badges]
# azure-devops = { project="...", pipeline="...", build="2" }
